--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -8,5 +8,6 @@
     <string name="title_activity_goals">GoalsActivity</string>
     <string name="title_activity_schedule">ScheduleActivity</string>
     <string name="title_activity_settings">SettingsActivity</string>
+    <string name="title_activity_create_exercise">CreateExerciseActivity</string>
 
 </resources>
