Restructured DB and Tables. Added initial workout - viewing functionality. Working on Creating WorkOuts now.PLEASE DO NOT MERGE YET.

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -9,5 +9,7 @@
     <string name="title_activity_schedule">ScheduleActivity</string>
     <string name="title_activity_settings">SettingsActivity</string>
     <string name="title_activity_create_exercise">CreateExerciseActivity</string>
+    <string name="title_activity_workout">WorkoutActivity</string>
+    <string name="title_activity_create_workout">CreateWorkout</string>
 
 </resources>
