All of tracking data works. Metrics/graphing works for body weight exercises. Now that the infrastructure is in place, it will be easy to add the other exercise types and workouts to the tracking.

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -21,7 +21,14 @@
         <item>Stretch</item>
         <item>Weight Machine</item>
     </string-array>
+    <string-array name="exercise_types_stats">
+        <item>Aerobic</item>
+        <item>Body Weight</item>
+        <item>Free Weight</item>
+        <item>Weight Machine</item>
+    </string-array>
 
     <string name="title_activity_stats">StatsActivity</string>
+    <string name="title_activity_main_stats">MainStatsActivity</string>
 
 </resources>
