--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,16 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">usabilityApp</string>
+    <string name="app_name">Octotrainer</string>
     <string name="action_settings">Settings</string>
     <string name="hello_world">Hello world!</string>
-    <string name="title_activity_exercise">ExerciseActivity</string>
-    <string name="title_activity_goals">GoalsActivity</string>
+    <string name="title_activity_exercise">Exercises</string>
+    <string name="title_activity_goals">Statistics</string>
     <string name="title_activity_schedule">ScheduleActivity</string>
     <string name="title_activity_settings">SettingsActivity</string>
-    <string name="title_activity_create_exercise">CreateExerciseActivity</string>
-    <string name="title_activity_workout">WorkoutActivity</string>
-    <string name="title_activity_create_workout">CreateWorkout</string>
+    <string name="title_activity_create_exercise">Create Exercise</string>
+    <string name="title_activity_workout">Workouts</string>
+    <string name="title_activity_create_workout">Create Workout</string>
     <string name="title_activity_review_workout">Review Workout</string>
     <string name="exercise_type">Type</string>
 
@@ -28,7 +28,7 @@
         <item>Weight Machine</item>
     </string-array>
 
-    <string name="title_activity_stats">StatsActivity</string>
-    <string name="title_activity_main_stats">MainStatsActivity</string>
+    <string name="title_activity_stats">Statistics</string>
+    <string name="title_activity_main_stats">Statistics</string>
 
 </resources>
